crates/reinhardt-core/macros/tests/ui/routes_registration/fail/sync_with_inject.rs
use reinhardt_macros::routes;

struct UnifiedRouter;

#[routes]
pub fn routes(#[inject] _router: UnifiedRouter) -> UnifiedRouter {
    UnifiedRouter
}

fn main() {}
